# studypython

./: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  26.py  27.py  28.py  29.py  3.py  30.py  31.py  32.py  33.py  34.py  4.py  5.py  6.py  7.py  8.py  9.py  README.md  re_test1.py  register.py  test3.py
new_study/: fun.py  hello.cpp  op_file.py  op_json.py  py_test.py  python_test1.py  test1.py  test2.py  test4.py  test5.py  test6.py  test7.py  test_ctypes.py  test_pexpect.py  txt1
new_study/click/: test4.py  test_click.py  test_click2.py  test_click3.py
new_study/click/ctypes_click/: CMakeLists.txt  ReadMe.md
new_study/click/ctypes_click/c_api/: api.cpp  api.h
new_study/click/ctypes_click/py/: cmd.py  para.py
new_study/genpy/: autogen.txt  autogen_people_sports.py  autogen_sports.py
new_study/j2/: 0test.j2  1test.j2  2test.j2
new_study/json/: test.json
new_study/json_test/: a.json  b.json  c.json  gen.sh  my_global.py  test_json_file.py
pytest/: ReadMe.md  conftest.py  pytest_jenkins.sh  requirements.txt  test_append.py  test_append2.py  test_class.py  test_class_demo.py  test_expection.py  test_factory.py  test_fixtrure_mark.py  test_fixture_scope.py  test_mark_para.py  test_module.py  test_param.py  test_sample.py  test_setenv.py
re_module/: re_test2.py  re_test3.py
thread/: myThread.py  thread1.py  thread2.py  thread3.py  thread4.py  thread_mssleepa.py  thread_mssleepb.py
web_program/: .tcpclient.py.swp  tcpclient.py  tcpserver.py  udpclient.py  udpclient2.py  udpserver.py
(+10 files in other folders)
